[package]
name = "paradex"
version = "0.5.7"
edition = "2024"
license = "MIT"
description = "Paradex client library"
repository  = "https://github.com/snow-avocado/paradex-rs"

[dependencies]
cached = "0.56.0"
chrono = { version =  "0.4.41", features = ["serde"] }
futures-util = "0.3.31"
jsonrpsee-core = "0.24.9"
jsonrpsee-types = "0.24.9"
log = "0.4.27"
reqwest =  {version="0.12.24", features=["json"]}
rust_decimal = {version="1.39.0", features=["serde"]}
serde = "1.0.228"
serde_json = "1.0.145"
starknet-core = "0.16.0"
starknet-crypto = "0.8.1"
starknet-signers = "0.14.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features=["full"]}
tokio-tungstenite = {version = "0.28.0", features=["rustls-tls-native-roots"]}
rustls = { version = "0.23.33", features = ["aws-lc-rs"] }

[dev-dependencies]
clap = {version="4.5.53", default-features=false, features=["std", "derive"]}
simple_logger = "5.1.0"
criterion = "0.7.0"
mimalloc = "0.1.47"

[profile.bench]
debug = true

[[bench]]
name = "order_sign"
harness = false
