[package]
name = "paradex"
version = "0.5.8"
edition = "2024"
license = "MIT"
description = "Paradex client library"
repository  = "https://github.com/snow-avocado/paradex-rs"

[dependencies]
cached = "0.56.0"
chrono = "0.4.41"
futures-util = "0.3.31"
jsonrpsee-core = "0.24.9"
jsonrpsee-types = "0.24.9"
log = "0.4.27"
reqwest =  {version="0.12.24", features=["json"]}
rust_decimal = {version="1.39.0", features=["serde"]}
serde = "1.0.228"
serde_json = "1.0.145"
starknet-core = "0.16.0"
starknet-crypto = "0.8.1"
starknet-signers = "0.14.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features=["full"]}
tokio-tungstenite = {version = "0.28.0", features=["rustls-tls-native-roots"]}
rustls = { version = "0.23.33", features = ["aws-lc-rs"] }
serde_tuple = "1.1.3"
alloy-signer = { version = "1", optional = true }
alloy-signer-local = { version = "1", optional = true }
alloy-primitives = { version = "1", optional = true }
alloy-sol-types = { version = "1", optional = true }
num-bigint = { version = "0.4.6", optional = true }
num-traits = { version = "0.2.19", optional = true }
sha2 = { version = "0.10", optional = true }

[features]
default = []
onboarding = [
	"alloy-signer",
	"alloy-signer-local",
	"alloy-primitives",
	"alloy-sol-types",
	"num-bigint",
	"num-traits",
	"sha2",
]

[dev-dependencies]
clap = {version="4.5.53", default-features=false, features=["std", "derive"]}
simple_logger = "5.1.0"
criterion = "0.7.0"
mimalloc = "0.1.47"

[profile.bench]
debug = true

[[bench]]
name = "order_sign"
harness = false
